
syntax = "proto3";

package ai.models;


enum AIModel {
    ALL_MINI_LM_L6_V2 = 0;
    ALL_MINI_LM_L12_V2 = 1;
    BGE_BASE_EN_V15 = 2;
    BGE_LARGE_EN_V15 = 3;
    RESNET50 = 4;
    CLIP_VIT_B32_IMAGE = 5;
    CLIP_VIT_B32_TEXT = 6;
}

// Enum for AI Store Input Types
enum AIStoreInputType {
    RAW_STRING = 0;
    IMAGE = 1;
}
